@@ -19,6 +19,7 @@
 * Implemented ability to test rules in an URL group
 * Implemented ability to sort subscription plans at front end
 * Implemented deletion of the "user registration" subscription after first regular subscription is selected
+* Implemented ability to grant user capability to view all content pages
 * Reworked protection rules
 * Reworked BuddyPress protection rules
 
